force-app/main/default/objects/IntegrationEndpoint__mdt/IntegrationEndpoint__mdt.object-meta.xml
<CustomObject>
    <description>Stores integration&apos;s endpoints</description>
    <label>Integration Endpoint</label>
    <pluralLabel>Integration Endpoints</pluralLabel>
</CustomObject>