force-app/main/default/objects/IntegrationEndpoint__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>Content-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>application/graphql</fullName>
                <default>true</default>
                <label>application/graphql</label>
            </value>
            <value>
                <fullName>application/json</fullName>
            </value>
            <value>
                <fullName>application/ld+json</fullName>
            </value>
            <value>
                <fullName>application/octet-stream</fullName>
            </value>
            <value>
                <fullName>application/pdf</fullName>
            </value>
            <value>
                <fullName>application/vnd.api+json</fullName>
            </value>
            <value>
                <fullName>application/xml</fullName>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
            </value>
            <value>
                <fullName>application/yaml</fullName>
            </value>
            <value>
                <fullName>image/jpeg</fullName>
            </value>
            <value>
                <fullName>image/png</fullName>
            </value>
            <value>
                <fullName>multipart/form-data</fullName>
            </value>
            <value>
                <fullName>text/plain</fullName>
            </value>
            <value>
                <fullName>text/xml</fullName>
            </value>
            <value>
                <fullName>text/yaml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>